<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">chatbot_thalia</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_te_ayudare_a_en">Te ayudare a entenderte</string>
  <string name="lbl_registrate">Registrate</string>
  <string name="lbl_o">o</string>
  <string name="lbl_inicia_sesi_n">Inicia Sesión</string>
  <string name="msg_nombre_de_usuar">Nombre de usuario:</string>
  <string name="msg_aaaaaaaaaaaaaaa">aaaaaaaaaaaaaaaaaaaaaa</string>
  <string name="lbl_chatbot">Chatbot</string>
  <string name="lbl_regresar">Regresar</string>
  <string name="lbl_thalia">Thalia</string>
  <string name="lbl">&#1049351;</string>
  <string name="lbl_respuesta">Respuesta</string>
  <string name="lbl_contrase_a">Contraseña:</string>
  <string name="lbl_grado_escolar">Grado escolar:</string>
  <string name="lbl_inicia_sesi_n2">Inicia sesión</string>
</resources>
