<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="registroVM" type="com.chatbotthalia.app.modules.registro.data.viewmodel.RegistroVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearRegistro"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_1pxh"
            android:layout_width="match_parent"
            app:contentInsetStart="0dp" style="@style/groupStyleblack_900">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearBase"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_7pxv"
                android:layout_marginEnd="@dimen/_13pxh"
                android:layout_marginStart="@dimen/_21pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageTimeLight"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_17pxv"
                    android:layout_width="@dimen/_28pxh"
                    android:scaleType="centerCrop" circular="@{true}"
                    imageRes="@{@drawable/img_timelight}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_timelight"/>
                <FrameLayout android:id="@+id/frameStacknotch"
                    android:layout_height="@dimen/_28pxv"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_8pxh" android:layout_width="@dimen/_275pxh">
                    <ImageView android:id="@+id/imageNotch"
                        android:layout_gravity="start"
                        android:layout_height="@dimen/_28pxh"
                        android:layout_marginBottom="@dimen/_1pxv"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="@dimen/_219pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_notch"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_notch"/>
                    <ImageView android:id="@+id/imageRightSide"
                        android:layout_gravity="bottom|end"
                        android:layout_height="@dimen/_11pxh"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_66pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_rightside"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_rightside"/>
                </FrameLayout>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <FrameLayout android:id="@+id/frameStackthalia"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_150pxv"
            android:layout_marginEnd="@dimen/_63pxh"
            android:layout_marginStart="@dimen/_63pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_205pxh">
            <TextView android:ellipsize="end"
                android:gravity="top|start" android:id="@+id/txtThalia"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{registroVM.registroModel.txtThalia}"
                style="@style/txtArchivoBlackregular60" tools:text="@string/lbl_thalia"/>
            <ImageView android:id="@+id/imageRectangle"
                android:layout_gravity="top|center"
                android:layout_height="@dimen/_143pxh"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_45pxh"
                android:layout_marginStart="@dimen/_45pxh"
                android:layout_width="@dimen/_111pxh"
                android:scaleType="fitXY"
                imageRes="@{@drawable/img_rectangle_1}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle_1"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtNombredeusuar"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_63pxh"
            android:layout_marginStart="@dimen/_63pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{registroVM.registroModel.txtNombredeusuar}"
            style="@style/txtSyneregular17" tools:text="@string/msg_nombre_de_usuar"/>
        <TextView android:ellipsize="end" android:id="@+id/txtContrasea"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_63pxh"
            android:layout_marginStart="@dimen/_63pxh"
            android:layout_marginTop="@dimen/_85pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{registroVM.registroModel.txtContrasea}"
            style="@style/txtSyneregular17" tools:text="@string/lbl_contrase_a"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtGradoescolar"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_63pxh"
            android:layout_marginStart="@dimen/_63pxh"
            android:layout_marginTop="@dimen/_86pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{registroVM.registroModel.txtGradoescolar}"
            style="@style/txtSyneregular17" tools:text="@string/lbl_grado_escolar"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAaaaaaaaaaaaaaaaaaaaaa"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_62pxh"
            android:layout_marginStart="@dimen/_63pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_12pxv"
            android:paddingEnd="@dimen/_16pxh"
            android:paddingStart="@dimen/_16pxh"
            android:paddingTop="@dimen/_12pxv" android:singleLine="true"
            android:text="@string/msg_aaaaaaaaaaaaaaa"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_aaaaaaaaaaaaaaa"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnRegistrate"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_36pxv"
            android:layout_marginEnd="@dimen/_63pxh"
            android:layout_marginStart="@dimen/_63pxh"
            android:layout_marginTop="@dimen/_91pxv"
            android:layout_width="@dimen/_160pxh"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_7pxv" android:singleLine="true"
            android:text="@string/lbl_registrate"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_registrate"/>
        <TextView android:ellipsize="end" android:id="@+id/txtRegresar"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_63pxh"
            android:layout_marginStart="@dimen/_63pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@{registroVM.registroModel.txtRegresar}"
            style="@style/txtSyneregular17" tools:text="@string/lbl_regresar"/>
        <LinearLayout android:id="@+id/linearRowpolygonone"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="match_parent"
            android:orientation="horizontal" style="@style/groupStyleblack_901">
            <ImageView android:id="@+id/imagePolygonOne"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginBottom="@dimen/_3pxv"
                android:layout_marginStart="@dimen/_48pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="@dimen/_32pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_polygon1"
                tools:ignore="ContentDescription" tools:src="@drawable/img_polygon1"/>
            <LinearLayout android:id="@+id/linearRowellipseone"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_62pxh"
                android:layout_marginStart="@dimen/_86pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_weight="0.8" android:layout_width="0dp" android:orientation="horizontal">
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_15_5"
                    android:id="@+id/viewEllipseOne"
                    android:layout_height="@dimen/_31pxh" android:layout_width="@dimen/_31pxh"/>
                <View android:background="@color/white_A700"
                    android:id="@+id/lineLineThree"
                    android:layout_height="@dimen/_26pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_76pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.07" android:layout_width="0dp"/>
                <View android:background="@color/white_A700"
                    android:id="@+id/lineLineFive"
                    android:layout_height="@dimen/_26pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.07" android:layout_width="0dp"/>
                <View android:background="@color/white_A700"
                    android:id="@+id/lineLineFour"
                    android:layout_height="@dimen/_26pxv"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.07" android:layout_width="0dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
